--- a/app/src/main/res/layout/activity_add_notes.xml
+++ b/app/src/main/res/layout/activity_add_notes.xml
@@ -10,21 +10,23 @@
         android:id="@+id/title_EditText"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="72dp"
-        android:fontFamily="@font/OpenSansRegular"
+        android:layout_marginBottom="76dp"
+        android:fontFamily="@font/open_sans_regular"
         android:hint="Title"
         android:padding="10dp"
         app:layout_constraintBottom_toTopOf="@+id/description_EditText"
-        tools:layout_editor_absoluteX="55dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/description_EditText"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:fontFamily="@font/OpenSansRegular"
+        android:fontFamily="@font/open_sans_regular"
         android:hint="Description"
         android:padding="10dp"
-        tools:layout_editor_absoluteX="55dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="427dp" />
 
     <Button
@@ -32,7 +34,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:background="@android:color/black"
-        android:fontFamily="@font/OpenSansRegular"
+        android:fontFamily="@font/open_sans_regular"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
